bugfix in complement func

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image:secure_url"   content="https://emanuelfeld.github.io/256-farben/img/img.png">
 
     <script src="js/analytics.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="https://emanuelfeld.github.io/256-farben/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://emanuelfeld.github.io/256-farben/favicon.ico">
     <link rel=stylesheet href="css/index.css">
 </head>
 <body>
@@ -32,9 +32,9 @@
                 <span id="life-4">•</span>
                 <span id="life-5">•</span>
             </div>
-                <div id="label-author">After Gerhard Richter (b. 1932)</div>
-                <div id="label-date"></div>
-                <div id="label-instructions">Press SPACE to begin. Use your RIGHT and LEFT arrow keys to move.</div>
+            <div id="label-author">After Gerhard Richter (b. 1932)</div>
+            <div id="label-date"></div>
+            <div id="label-instructions">Press SPACE to begin. Use your RIGHT and LEFT arrow keys to move.</div>
             <div class="controls">
                 <div class="control"><span id="new-game">start over</span></div>
                 <div class="control"><span id="new-colors">change background</span></div>
